<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Inserare carte -->
        <EditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Titlu" />

        <EditText
            android:id="@+id/authorInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Autor" />

        <EditText
            android:id="@+id/pagesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Numar pagini"
            android:inputType="number" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="insertBook"
            android:text="Adauga carte" />

        <!-- Selectare toate -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getAllBooks"
            android:text="@string/afiseaza_toate_cartile" />

        <!-- Cautare dupa titlu -->
        <EditText
            android:id="@+id/searchTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cauta_dupa_titlu" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getByTitle"
            android:text="@string/cauta_carte" />

        <!-- Filtrare interval pagini -->
        <EditText
            android:id="@+id/minPagesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pagini_min"
            android:inputType="number" />

        <EditText
            android:id="@+id/maxPagesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pagini_max"
            android:inputType="number" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getByPageRange"
            android:text="@string/filtreaza_dupa_interval_pagini" />

        <!-- Ștergere dupa valoare -->
        <EditText
            android:id="@+id/filterValueInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valoare_pagini_pentru_stergere"
            android:inputType="number" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="deleteGreater"
            android:text="@string/sterge_cartile_cu_pagini_mai_mare_valoare" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="deleteLess"
            android:text="@string/sterge_cartile_cu_pagini_mai_mica_valoare" />

        <!-- Incrementeaza pagini -->
        <EditText
            android:id="@+id/prefixInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prefix_titlu" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="incrementByPrefix"
            android:text="@string/incrementeaza_paginile_pentru_titlurile_cu_prefixul" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/inapoi_la_meniul_principal" />
    </LinearLayout>


</ScrollView>
