<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/editTextUserInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/buttonDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gestioneaza_carti_room_db"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/editTextUserInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonChangeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_text"
        app:layout_constraintTop_toBottomOf="@id/buttonDatabase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/buttonGoToSecondActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mergi_la_second_activity"
        app:layout_constraintTop_toBottomOf="@id/buttonChangeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/buttonAdaugaMagazin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Magazin"
        app:layout_constraintTop_toBottomOf="@id/buttonGoToSecondActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/buttonSetari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Setări"
        app:layout_constraintTop_toBottomOf="@id/buttonAdaugaMagazin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp" />

    <Switch
        android:id="@+id/switchAdapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Custom Adapter"
        app:layout_constraintTop_toBottomOf="@id/buttonSetari"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp" />

    <ListView
        android:id="@+id/listViewMagazin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/switchAdapter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
